GITBOOK-53: Hazelcast breaking change